[project]
name = "example_package_paul_vanderveen"
version = "0.0.1"
authors = [
  { name="Paul Vanderveen", email="psv51037@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/paulvxx/pysamplepaulv"
Issues = "https://github.com/paulvxx/pysamplepaulv"
